_sass/main.scss
/* ... */
#org-list .org .description:hover .excerpt {
    animation: fade linear 10s;
}

#org-list .org .description img, #post-list .post img {
    transition: filter .3s linear;
}

.mobile #org-list .org .description img,
.mobile #post-list .post img {
    filter: drop-shadow(2px 4px 6px rgba(0,0,0, 0.7));
}

#org-list .org .description:hover img,
#post-list .post:hover img {
    filter: drop-shadow(2px 4px 6px rgba(0,0,0, 0.8));
}

#org-list .org .excerpt div {
    background: var(--bg);
    color: var(--colourtext);
    padding: 1em;
    display: flex;
}

#org-list .org .excerpt div p {
    overflow: hidden;
}

/*************************************
 Main text
  ***********************************/

.desktop.home #main-text {
    padding-bottom: 150px;
}

.desktop.org #main-text,
.desktop.post #main-text {
    padding-bottom: 30px;
}

.desktop.default:not(.viz) #main-text {
    padding-bottom: 300px;
}

.desktop.tags-all #main-text {
    padding-bottom: 220px;
}

.mobile.default #main-text {
    padding-bottom: 20px;
}

#main-text p {
    margin-bottom: 1em;
}

/*************************************
 Tag and simple pages
  ***********************************/

.tag #main-text img {
    background: url(images/shadow.svg) bottom center no-repeat;
}

/*************************************
 Org page
  ***********************************/

.org .grid .logo,
.org-logo {
    position: relative;
    padding: 20px;
    margin: auto;
    background: url(images/circle.svg) center center no-repeat;
    background-size: cover;
    width: 180px;
    height: 180px;
}

/*************************************
 Post/Group page
 ***********************************/

.post .logo {
    filter: drop-shadow(0px 0px 7px rgba(255,255,255,0.7));
}

/*************************************
Post/Group & Org page
  ***********************************/

.links {
    margin: 2em 0 2em;
    list-style: none;
    font-family: "Roboto", sans-serif;
    line-height: 140%;
    font-variation-settings: "wght" 400;
}

.links.tags {
    margin: -1em 0 2em 0;
}

.links li:before {
    content: " ";
    width: 100%;
    height: 1px;
    background: var(--colour3);
    display: block;
    margin-bottom: 0.8em;
    margin-top: 0.8em;
}

.all-groups {
    background-image: url("images/arrow-down.svg");
    background-repeat: no-repeat;
    background-position: 0 6px;
    background-size: 12px 12px;
    padding-left: 18px;
    margin-top: 3em;
    margin-bottom: 2em;
}

.all-groups a {
    text-decoration: none;
    color: var(--colour2);
    background: var(--bg);
    padding: 0 0.25em;
}

#main-text img, #intro img, #breadcrumbs {
    position: relative;
    z-index: 5;
}

#content, #org-list, #post-list {
    position: relative;
    z-index: 3; /* above cloud */
}

/*************************************
 Post list
 ***********************************/

#post-list {
    padding-top: 1em;
}

#post-list .grid {
    grid-row-gap: 3em;
}

#post-list .post {
    cursor: pointer;
    text-align: center;
}

#post-list .post a {
    text-decoration: none;
}

/*************************************
  Cloud
***********************************/

.cloud {
    background: url(images/cloud.svg) no-repeat center center;
    background-size: contain;
    width: 150px;
    height: 150px;
    display: block;
    position: absolute;
    top: 40vh;
    left: -150px;
    z-index: 2;
    transition: all 1s ease-in-out;
    animation: move ease-in-out 40s -5s infinite alternate-reverse;
}

.cloud2 {
    top: 2vh;
    left: 35vw;
    width: 100px;
    height: 100px;
    animation: move ease-in-out 25s -2s infinite alternate;
}

/***************************************
  Data dashboard & dominance site area
***************************************/

#site-area-menu {
    top: 0;
    z-index: 10;
    padding-top: 0;
    padding-left: var(--hspace);
    background: rgba(214, 45, 38, 0.2);
}

.viz #site-area-menu {
    background: rgba(0,148,110,0.3);
}

#site-area-menu ul {
    margin: 0;
}

#site-area-menu li a {
    background-color: var(--colour1);
    color: #fff;
    opacity: 0.7;
    padding: 0.2em 0.5em;
}

.viz #site-area-menu li a {
    background-color: var(--colour2);
}

#site-area-menu li a:hover,
#site-area-menu.current-area-viz li:nth-child(2) a,
#site-area-menu:not(.current-area-viz) li:first-child a {
    opacity: 1;
}

#site-area-menu li {
    display: inline;
}

body.viz .site-title a {
    color: var(--colour2);
}

.viz .section-content#intro {
    padding-bottom: 0.5em;
}

.viz .section-content#intro .post {
    text-align: center;
}

.section-content#intro .post img {
    filter: drop-shadow(2px 4px 6px rgba(0,0,0,0.8));
    background: url(images/shadow.svg) bottom center no-repeat;
    background-size: contain;
    padding-bottom: 25px;
}

.section-content#intro .post .post-title {
    background: var(--colour1);
}

.section-content#viz-actions {
    padding-bottom: 0;
    align-items: center;
}

.section-content#viz-actions .post {
    background: var(--colour2);
    text-align: center;
}

.section-content#viz-actions .post img {
    mix-blend-mode: luminosity;
    height: 80px;
    margin-top: 1em;
}

.spacer {
    display: block;
    border-bottom: 1px dashed var(--colour2);
    margin-bottom: 2em;
}

/*
.catnip-icon {
    max-width: 250px;
}

.dom-dashboard .catnip-icon {
    margin-top: -100px;
    z-index: 100;
    position: relative;
    max-width: 150px;
    float: right;
}
*/

select {
    background-color: var(--colour2);
    padding: .5em;
    color: #fff;
    border: #fff;
    margin-bottom: .25em;
    cursor: pointer;
}

select option:hover,
select option:checked {
    background-color: var(--colour3);
}

.dom-bottom-links img {
    display: block;
    margin-top: 1.5em;
    margin-left: -25px;
    transition: all .1s cubic-bezier(0.71, 1.32, 1, 1.38);
}

.dom-bottom-links p:last-child img {
    margin-top: 0.9em;
}

.dom-bottom-links a:hover img {
    transform: scale(1.1);
}

.dom-bottom-links .button {
    padding: 0.2em;
}
/* ... */

